--- a/barber_don/pubspec.yaml
+++ b/barber_don/pubspec.yaml
@@ -30,10 +30,13 @@ dependencies:
   cupertino_icons: ^0.1.3
   table_calendar: ^2.2.3
   getflutter: ^1.1.3
-  firebase_auth: ^0.11.1+7 #autenticacao
-  cloud_firestore: 
+  #firebase_auth: ^0.11.1+7 #autenticacao
+  #cloud_firestore: 
   #firebase_core_web:
   #cloud_firestore_web:
+  flutter_facebook_login: 3.0.0
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
 
 dev_dependencies:
   flutter_test:
