--- a/barber_don/pubspec.yaml
+++ b/barber_don/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_facebook_login: 3.0.0
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
+  firebase_core : ^0.5.0
 
 dev_dependencies:
   flutter_test:
